# garpy

./: .travis.yml  README.md  README.rst  pyproject.toml
.github/workflows/: codeql.yml  test.yml
garpy/: __init__.py  activity.py  cli.py  client.py  download.py  settings.py  wellness.py
garpy/resources/: default_config.yaml
tests/: common.py  conftest.py  test_activities.py  test_cli.py  test_client.py  test_download.py  test_wellness.py
tests/response_examples/: list_activities.json  summary_9766544337.json
