[tool.poetry]
name = "garpy"
version = "0.3.2"
description = "Python client for downloading activities from Garmin Connect"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/felipeam86/garpy"

[tool.poetry.scripts]
garpy = "garpy.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
attrs = "^19.1"
pendulum = "^2.0"
PyYAML = "^5.1"
click = "^7.0"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.7"
coveralls = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
