[tool.poetry]
name = "garpy"
version = "0.3.7"
description = "Python client for downloading activities from Garmin Connect"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/felipeam86/garpy"

[tool.poetry.scripts]
garpy = "garpy.cli:main"

[tool.poetry.dependencies]
python = "^3.6.15"
requests = "^2.22"
attrs = "^21.4.0"
pendulum = "^2.0"
PyYAML = ">=5.1,<7.0"
click = ">=7,<9"
tqdm = "^4.36"
cloudscraper = "^1.2.58"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0"
coveralls = "^3.0"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
